# robot-stylus

./: .gitignore  Dockerfile  README.md  camera1.config
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml
src/camera_mindvision/: CMakeLists.txt  package.xml
src/camera_mindvision/config/: params.yaml
src/camera_mindvision/include/camera_mindvision/: camera_mindvision.hpp
src/camera_mindvision/launch/: main.launch.py
src/camera_mindvision/src/: camera_mindvision.cpp
src/camera_pylon/: CMakeLists.txt  package.xml
src/camera_pylon/config/: params.yaml
src/camera_pylon/include/camera_pylon/: camera_pylon.hpp
src/camera_pylon/launch/: main.launch.py
src/camera_pylon/src/: camera_pylon.cpp
src/locate_stylus/: CMakeLists.txt  package.xml
src/locate_stylus/config/: params.yaml
src/locate_stylus/include/locate_stylus/: locate_stylus.hpp
src/locate_stylus/launch/: main.launch.py
src/locate_stylus/src/: locate_stylus.cpp
src/locate_stylus/test/: CMakeLists.txt  empty_memcpy.cpp  empty_point_cloud2.cpp  locate.cpp  to_from_point_cloud2.cpp
src/pipeline/: README.md  package.xml
src/pipeline/launch/: main.launch.py  main.launch.py.bak
src/reconstruct_pose/: CMakeLists.txt  package.xml
src/reconstruct_pose/config/: params.yaml
src/reconstruct_pose/include/reconstruct_pose/: reconstruct_pose.hpp
src/reconstruct_pose/launch/: main.launch.py
src/reconstruct_pose/src/: reconstruct_pose.cpp
src/reconstruct_pose/test/: CMakeLists.txt  to_from_point_cloud2.cpp  triangulate_points.cpp
